<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_input"
        android:textSize="14sp"
        android:maxLength="256"
        android:inputType="textPersonName"
        android:digits="@string/alphabets_only"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/btnGetResult"
        android:text="@string/get_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInput" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:id="@+id/labelOutput2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/output2"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/resultOutput1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:id="@+id/resultOutput1"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelOutput1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:id="@+id/labelOutput1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/output1"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnGetResult"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:id="@+id/resultOutput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/labelOutput2"/>



</androidx.constraintlayout.widget.ConstraintLayout>